--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "expo": "^49.0.21",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
