--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "^49.0.21",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
